Bug 159348 - Highlight cell does not repaint on when window is maximized
Summary: Highlight cell does not repaint on when window is maximized
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.6.4.1 release
Hardware: All All
: medium normal
Assignee: Rafael Lima
URL:
Whiteboard: target:25.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2024-01-23 23:32 UTC by Rafael Lima
Modified: 2024-07-10 17:32 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rafael Lima 2024-01-23 23:32:55 UTC
Steps to reproduce:

1) Open Calc and resize the window so that it is not maximized
2) Enable Column/Row highlighting (in the View menu)
3) Click any cell to see the highlight
4) Maximize the window
5) Notice that the portion of the window that was not visible does not have highlight

System info (built today)

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: afe2ef3eb23f58ab9d25fe3e69e6709bbf4da136
CPU threads: 16; OS: Linux 6.5; UI render: default; VCL: kf5 (cairo+xcb)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Calc: CL threaded
Comment 1 Rafael Lima 2024-01-23 23:34:28 UTC
@Sahil, can you please take a look?
Comment 2 Dean 2024-02-21 01:32:06 UTC
Hello Rafael Lima,

Thank you for reporting the bug. I can confirm that the bug is present in my build. 

Version: 24.2.0.3 (X86_64) / LibreOffice Community
Build ID: da48488a73ddd66ea24cf16bbc4f7b9c08e9bea1
CPU threads: 8; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded
Comment 3 Rafael Lima 2024-02-21 11:44:18 UTC
Based on Comment #2 I am setting this to NEW.
Comment 4 BogdanB 2024-05-12 18:29:41 UTC
Also in
Version: 24.2.3.1 (X86_64) / LibreOffice Community
Build ID: fc604d5980a783e74808a001f1918a603d920494
CPU threads: 16; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 5 Rafael Lima 2024-05-29 13:05:42 UTC
Proposed patch here:
https://gerrit.libreoffice.org/c/core/+/168192
Comment 6 Commit Notification 2024-07-10 17:28:46 UTC
Rafael Lima committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f6c017fe3c62dae2aa2980b4e105d872a70e4024

tdf#159348 Update Highlight Overlay when window is resized

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.