tdf#159348 Update Highlight Overlay when window is resized

When the window is not maximized, the highlight overlay outside the current view is not painted when the window is resized. This patch fixes this issue by repainting the overlay when the window is resized.

Change-Id: I4ad35dcdabc0c95fd24c52a7b9cf7bc6f2583c1c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168192
Tested-by: Jenkins
Reviewed-by: Rafael Lima <rafael.palma.lima@gmail.com>